fix vista comunicazioni pec - aggiunta label Account

--- a/l10n_it_pec_messages/view/mail_view.xml
+++ b/l10n_it_pec_messages/view/mail_view.xml
@@ -96,6 +96,7 @@
                     <field name="email_from" />
                     <field name="date" />
                     <field name="subject" />
+                    <field name="pec_server_user" string="Account"/>
                 </tree>
             </field>
         </record>
