--- a/l10n_it_pec_messages/wizard/mail_compose_message_view.xml
+++ b/l10n_it_pec_messages/wizard/mail_compose_message_view.xml
@@ -13,7 +13,7 @@
                         <field name="res_id" invisible="1" />
                         <field name="parent_id" invisible="1" context="{'pec_messages': True}"/>
                         <!-- visible wizard -->
-                        <field name="server_id" />
+                        <field name="server_id" options="{'no_quick_create': True, 'no_create_edit': True}"/>
                         <label for="partner_ids" string="Recipients"
                                     invisible="context.get('mail_compose_log', False)"/>
                         <div groups="base.group_user" invisible="context.get('mail_compose_log', False)">
