--- a/l10n_it_pec_messages/view/mail_view.xml
+++ b/l10n_it_pec_messages/view/mail_view.xml
@@ -48,41 +48,43 @@
             <field name="model">mail.message</field>
             <field name="priority">100</field>
             <field name="arch" type="xml">
-                <form string="Pec" create="false" edit="false" delete="false">
-                    <field name="email_from" readonly="1" />
-                    <field name="date"  readonly="1" />
-                    <field name="author_id"  />
-                    <newline/>
-                    <field name="subject" colspan="4" readonly="1" />
-                    <field name="body" colspan="4" readonly="1" />
-                    <newline/>
-                    <button name="%(l10n_it_pec_messages.action_reply_pec_compose_message_wizard)d"
-                            string="Reply" type="action" icon="terp-mail-message-new"
-                            context="{'default_partner_ids':author_id and [author_id] or [],'default_composition_mode':'reply','pec_messages': True}"/>
-                    <newline/>
+                <form string="Pec" create="false" edit="false" >
+                    <group>
+                        <field name="email_from" readonly="1" />
+                        <field name="date"  readonly="1" />
+                        <field name="author_id"  />
+                        <newline/>
+                        <field name="subject" colspan="4" readonly="1" />
+                        <field name="body" colspan="4" readonly="1" />
+                        <newline/>
+                        <button name="%(l10n_it_pec_messages.action_reply_pec_compose_message_wizard)d"
+                                string="Reply" type="action" icon="terp-mail-message-new"
+                                context="{'default_partner_ids':author_id and [author_id] or [],'default_composition_mode':'reply','pec_messages': True}"/>
+                        <newline/>
 
-                    <notebook colspan="6" >
-                        <page string="Recipients">
-                            <field name="partner_ids"
-                                        context = " {
-                                              'tree_view_ref' : 'l10n_it_pec_messages.message_pec_partner_tree',
-                                              'pec_messages': True}"
-                                        nolabel="1" readonly="1"
-                            />
-                        </page>
-                        <page string="Replies">
-                            <field name="child_ids" nolabel="1"
-                             readonly="1"
-                             context = " {
-                                              'form_view_ref' : 'l10n_it_pec_messages.message_pec_form',
-                                              'tree_view_ref' : 'l10n_it_pec_messages.message_pec_tree',
-                                              'pec_messages': True}"
-                              />
-                        </page>
-                        <page string="Attachment">
-                            <field name="attachment_ids" nolabel="1" readonly="1"/>
-                        </page>
-                    </notebook>
+                        <notebook colspan="6" >
+                            <page string="Recipients">
+                                <field name="partner_ids"
+                                            context = " {
+                                                  'tree_view_ref' : 'l10n_it_pec_messages.message_pec_partner_tree',
+                                                  'pec_messages': True}"
+                                            nolabel="1" readonly="1"
+                                />
+                            </page>
+                            <page string="Replies">
+                                <field name="child_ids" nolabel="1"
+                                 readonly="1"
+                                 context = " {
+                                                  'form_view_ref' : 'l10n_it_pec_messages.message_pec_form',
+                                                  'tree_view_ref' : 'l10n_it_pec_messages.message_pec_tree',
+                                                  'pec_messages': True}"
+                                  />
+                            </page>
+                            <page string="Attachment">
+                                <field name="attachment_ids" nolabel="1" readonly="1"/>
+                            </page>
+                        </notebook>
+                    </group>
                 </form>
             </field>
         </record>
@@ -96,7 +98,8 @@
                     <field name="email_from" />
                     <field name="date" />
                     <field name="subject" />
-                    <field name="pec_server_user" string="Account"/>
+                    <field name="partner_ids" />
+                    <!--<field name="pec_server_user" string="Account"/>-->
                 </tree>
             </field>
         </record>
