--- a/l10n_it_pec_messages/wizard/mail_compose_message_view.xml
+++ b/l10n_it_pec_messages/wizard/mail_compose_message_view.xml
@@ -17,14 +17,14 @@
                         <label for="partner_ids" string="Recipients"
                                     invisible="context.get('mail_compose_log', False)"/>
                         <div groups="base.group_user" invisible="context.get('mail_compose_log', False)">
-                            <span attrs="{'invisible':['|', ('model', '=', False), ('composition_mode', '!=', 'mass_mail')]}">
-                                    Followers of selected items and </span>
-                            <span attrs="{'invisible':['|', ('model', '=', False), ('composition_mode', '=', 'mass_mail')]}">
-                                    Followers of
-                                <field name="record_name" readonly="1" class="oe_inline"
-                                           attrs="{'invisible':[('model', '=', False)]}"/>
-                                    and
-                            </span>
+                            <!--<span attrs="{'invisible':['|', ('model', '=', False), ('composition_mode', '!=', 'mass_mail')]}">-->
+                                    <!--Followers of selected items and </span>-->
+                            <!--<span attrs="{'invisible':['|', ('model', '=', False), ('composition_mode', '=', 'mass_mail')]}">-->
+                                    <!--Followers of-->
+                                <!--<field name="record_name" readonly="1" class="oe_inline"-->
+                                           <!--attrs="{'invisible':[('model', '=', False)]}"/>-->
+                                    <!--and-->
+                            <!--</span>-->
                             <field name="partner_ids" widget="many2many_tags" placeholder="Add contacts to notify..." context="{'show_pec_email':True}"/>
                         </div>
                         <field name="subject" placeholder="Subject..." />
