correzione viste form e tree PEC

--- a/l10n_it_pec_messages/view/mail_view.xml
+++ b/l10n_it_pec_messages/view/mail_view.xml
@@ -105,8 +105,8 @@
                     <field name="email_from" />
                     <field name="date" />
                     <field name="subject" />
-                    <field name="partner_ids" />
-                    <!--<field name="pec_server_user" string="Account"/>-->
+                    <!--<field name="partner_ids" />-->
+                    <field name="pec_server_user" string="Account"/>
                 </tree>
             </field>
         </record>
