--- a/l10n_it_pec_messages/view/mail_view.xml
+++ b/l10n_it_pec_messages/view/mail_view.xml
@@ -52,7 +52,8 @@
                     <header>
                         <button name="%(l10n_it_pec_messages.action_reply_pec_compose_message_wizard)d"
                                     string="Rispondi" type="action" icon="terp-mail-message-new"
-                                    context="{'default_partner_ids':author_id and [author_id] or [],'default_composition_mode':'reply','pec_messages': True}"/>
+                                    context="{'default_partner_ids':author_id and [author_id] or [],'default_composition_mode':'reply','pec_messages': True}"
+                                    groups="base.group_pec_writer"/>
                         <field name="direction" invisible="1"/>
                     </header>
                     <sheet>
@@ -90,7 +91,7 @@
                                                   'form_view_ref' : 'l10n_it_pec_messages.message_pec_form',
                                                   'tree_view_ref' : 'l10n_it_pec_messages.message_pec_tree',
                                                   'pec_messages': True}"
-                                  />
+                                 groups="base.group_pec_writer"/>
                             </page>
                         </notebook>
                     </sheet>
@@ -185,28 +186,28 @@
         <record id="mail_pec_main" model="ir.ui.menu">
             <field name="name">PEC</field>
             <field name="parent_id" ref="mail.mail_feeds_main"/>
-            <field name="groups_id" eval="[(4, ref('base.group_pec'))]"/>
+            <field name="groups_id" eval="[(4, ref('base.group_pec_reader'))]"/>
         </record>
 
         <record id="mail_pec" model="ir.ui.menu">
             <field name="name">Read PEC</field>
             <field name="action" ref="action_mail_pec"/>
             <field name="parent_id" ref="mail_pec_main"/>
-            <field name="groups_id" eval="[(4, ref('base.group_pec'))]"/>
+            <field name="groups_id" eval="[(4, ref('base.group_pec_reader'))]"/>
         </record>
 
         <record id="menu_out_mail_pec" model="ir.ui.menu">
             <field name="name">Sent PEC</field>
             <field name="action" ref="action_out_mail_pec"/>
             <field name="parent_id" ref="mail_pec_main"/>
-            <field name="groups_id" eval="[(4, ref('base.group_pec'))]"/>
+            <field name="groups_id" eval="[(4, ref('base.group_pec_writer'))]"/>
         </record>
 
         <record id="mail_write_pec" model="ir.ui.menu">
             <field name="name">Write PEC</field>
             <field name="action" ref="action_email_pec_compose_message_wizard"/>
             <field name="parent_id" ref="mail_pec_main"/>
-            <field name="groups_id" eval="[(4, ref('base.group_pec'))]"/>
+            <field name="groups_id" eval="[(4, ref('base.group_pec_writer'))]"/>
         </record>
 
 </data>
