--- a/l10n_it_pec_messages/view/mail_view.xml
+++ b/l10n_it_pec_messages/view/mail_view.xml
@@ -100,7 +100,7 @@
                                                   'form_view_ref' : 'l10n_it_pec_messages.message_pec_form',
                                                   'tree_view_ref' : 'l10n_it_pec_messages.message_pec_tree',
                                                   'pec_messages': True}"
-                                       groups="base.group_pec_writer"/>
+                                       groups="base.group_pec_sent"/>
                             </page>
 
                         </notebook>
@@ -214,7 +214,7 @@
             <field name="name">Sent PEC</field>
             <field name="action" ref="action_out_mail_pec"/>
             <field name="parent_id" ref="mail_pec_main"/>
-            <field name="groups_id" eval="[(4, ref('base.group_pec_writer'))]"/>
+            <field name="groups_id" eval="[(4, ref('base.group_pec_sent'))]"/>
         </record>
 
         <record id="mail_write_pec" model="ir.ui.menu">
