--- a/l10n_it_pec_messages/view/mail_view.xml
+++ b/l10n_it_pec_messages/view/mail_view.xml
@@ -127,6 +127,7 @@
         <record id="pec_message_search_view" model="ir.ui.view">
             <field name="name">message.search.form</field>
             <field name="model">mail.message</field>
+            <field name="priority">26</field>
             <field name="arch" type="xml">
                 <search string="Message">
                     <field name="email_from" string="Pec address"/>
