--- a/l10n_it_pec_messages/view/mail_view.xml
+++ b/l10n_it_pec_messages/view/mail_view.xml
@@ -109,6 +109,25 @@
             </field>
         </record>
 
+        <!-- mail.message search: wall view !-->
+        <record model="ir.ui.view" id="view_message_search_seedoo">
+            <field name="name">mail.message.search.seedoo</field>
+            <field name="model">mail.message</field>
+            <field name="priority">10</field>
+            <field name="inherit_id" ref="mail.view_message_search"/>
+            <field name="arch" type="xml">
+                <field name="parent_id" position="after">
+                    <field name="pec_cc" string="CC PEC"/>
+                    <field name="pec_msg_id" string="PEC Id"/>
+                    <group string="Tipologia PEC">
+                        <filter string="PEC" name="pec" domain="[('pec_type','=','posta-certificata')]"/>
+                        <filter string="Ricevuta Accettazione" name="accettazione" domain="[('pec_type','=','accettazione')]"/>
+                        <filter string="Ricevuta Consegna" name="avvenuta_consegna" domain="[('pec_type','=','avvenuta-consegna')]"/>
+                    </group>
+                </field>
+            </field>
+        </record>
+
         <record model='ir.ui.view' id='message_pec_tree'>
             <field name="name">message.pec.tree</field>
             <field name="model">mail.message</field>
@@ -130,8 +149,23 @@
             <field name="priority">26</field>
             <field name="arch" type="xml">
                 <search string="Message">
-                    <field name="email_from" string="Pec address"/>
-                    <field name="date" string="Date"/>
+                    <field name="email_from" string="Da"/>
+                    <field name="pec_to" string="A"/>
+                    <field name="pec_cc" string="CC"/>
+                    <field name="subject" string="Oggetto"/>
+                    <field name="body" string="Contenuto"/>
+                    <field name="pec_msg_id" string="PEC Id"/>
+                    <field name="date"
+                           filter_domain="[('date','&gt;=',self)]"
+                           string="Data dal:"/>
+                    <field name="date"
+                           filter_domain="[('date','&lt;=',self)]"
+                           string="Data entro il:"/>
+                    <group string="Tipologia PEC">
+                        <filter string="PEC" name="pec" domain="[('pec_type','=','posta-certificata')]"/>
+                        <filter string="Ricevuta Accettazione" name="accettazione" domain="[('pec_type','=','accettazione')]"/>
+                        <filter string="Ricevuta Consegna" name="avvenuta_consegna" domain="[('pec_type','=','avvenuta-consegna')]"/>
+                    </group>
                 </search>
             </field>
         </record>
