Filtro su account PEC nella vista degli utenti

--- a/l10n_it_pec_messages/view/res_users.xml
+++ b/l10n_it_pec_messages/view/res_users.xml
@@ -9,7 +9,7 @@
         <field name="arch" type="xml">
             <notebook position="inside">
                 <page string="Fetchmail servers">
-                    <field name="allowed_server_ids"  />
+                    <field name="allowed_server_ids" domain="[('pec','=',True)]"/>
                 </page>
             </notebook>
         </field>
