--- a/l10n_it_pec_messages/view/mail_view.xml
+++ b/l10n_it_pec_messages/view/mail_view.xml
@@ -19,7 +19,7 @@
                         <field name="ref_msg_id"/>
                         <field name="error"/>
                         <field name="err_type"/>
-                        <field name="pec_server_user" attrs="{'invisible':[('direction','!=','in')]}"/>
+                        <field name="pec_server_user" attrs="{'invisible':[('direction','!=','in')]}" string="Account"/>
 
                         <field name="recipient_id"/>
                         <field name="recipient_addr"/>
@@ -28,8 +28,8 @@
                     </group>
                 </field>
                 <field name="email_from" position="after">
-                    <field name="pec_to" attrs="{'invisible':[('server_id','=',False)]}"/>
-                    <field name="pec_cc" attrs="{'invisible':[('server_id','=',False)]}"/>
+                    <field name="pec_to" string="A" attrs="{'invisible':[('server_id','=',False)]}"/>
+                    <field name="pec_cc" string="CC" attrs="{'invisible':[('server_id','=',False)]}"/>
                 </field>
             </field>
         </record>
@@ -62,14 +62,14 @@
                     <sheet>
                         <div class="message_header">
                             <group col="4">
-                                <field name="pec_server_user" attrs="{'invisible':[('direction','!=','in')]}"/>
+                                <field name="pec_server_user" attrs="{'invisible':[('direction','!=','in')]}" string="Account"/>
                                 <field name="date" readonly="1"/>
                                 <field name="author_id" string="Contatto Rubrica"/>
                                 <newline/>
                                 <field name="email_from" readonly="1"/>
                                 <newline/>
-                                <field name="pec_to" colspan="4" readonly="1"/>
-                                <field name="pec_cc" colspan="4" readonly="1"/>
+                                <field name="pec_to" string="A" colspan="4" readonly="1"/>
+                                <field name="pec_cc" string="CC" colspan="4" readonly="1"/>
                             </group>
                         </div>
                         <group class="message_data">
