--- a/l10n_it_pec_messages/view/mail_view.xml
+++ b/l10n_it_pec_messages/view/mail_view.xml
@@ -64,6 +64,7 @@
                             <group col="4">
                                 <field name="pec_server_user" string="Account"/>
                                 <field name="date" readonly="1"/>
+                                <newline/>
                                 <field name="author_id" string="Contatto Rubrica"/>
                                 <newline/>
                                 <field name="email_from" readonly="1"/>
@@ -128,7 +129,7 @@
             </field>
         </record>
 
-        <record model='ir.ui.view' id='message_pec_tree'>
+        <record id="message_pec_tree" model="ir.ui.view">
             <field name="name">message.pec.tree</field>
             <field name="model">mail.message</field>
             <field name="priority">100</field>
@@ -143,7 +144,49 @@
             </field>
         </record>
 
+        <record id="out_message_pec_tree" model="ir.ui.view">
+            <field name="name">message.pec.tree</field>
+            <field name="model">mail.message</field>
+            <field name="priority">100</field>
+            <field name="arch" type="xml">
+                <tree string="Pec" create="false" delete="false">
+                    <field name="email_from"/>
+                    <field name="date"/>
+                    <field name="subject"/>
+                    <field name="pec_server_user" string="Account"/>
+                </tree>
+            </field>
+        </record>
+
         <record id="pec_message_search_view" model="ir.ui.view">
+            <field name="name">message.search.form</field>
+            <field name="model">mail.message</field>
+            <field name="priority">26</field>
+            <field name="arch" type="xml">
+                <search string="Message">
+                    <field name="email_from" string="Da"/>
+                    <field name="pec_to" string="A"/>
+                    <field name="pec_cc" string="CC"/>
+                    <field name="subject" string="Oggetto"/>
+                    <field name="body" string="Contenuto"/>
+                    <field name="server_id" string="Account"/>
+                    <field name="pec_msg_id" string="PEC Id"/>
+                    <field name="date"
+                           filter_domain="[('date','&gt;=',self)]"
+                           string="Data dal:"/>
+                    <field name="date"
+                           filter_domain="[('date','&lt;=',self)]"
+                           string="Data entro il:"/>
+                    <group string="Tipologia PEC">
+                        <filter string="PEC" name="pec" domain="[('pec_type','=','posta-certificata')]"/>
+                        <filter string="Ricevuta Accettazione" name="accettazione" domain="[('pec_type','=','accettazione')]"/>
+                        <filter string="Ricevuta Consegna" name="avvenuta_consegna" domain="[('pec_type','=','avvenuta-consegna')]"/>
+                    </group>
+                </search>
+            </field>
+        </record>
+
+        <record id="out_pec_message_search_view" model="ir.ui.view">
             <field name="name">message.search.form</field>
             <field name="model">mail.message</field>
             <field name="priority">26</field>
@@ -192,7 +235,7 @@
             <field name="res_model">mail.message</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
-            <field name="search_view_id" ref="pec_message_search_view"/>
+            <field name="search_view_id" ref="out_pec_message_search_view"/>
             <field name="domain">[
                 ('server_id.pec','=',True),
                 ('pec_type','=','posta-certificata'),
@@ -222,7 +265,7 @@
         <record model="ir.actions.act_window.view" id="out_message_pec_act_tree">
             <field name="sequence" eval="1"/>
             <field name="view_mode">tree</field>
-            <field name="view_id" ref="message_pec_tree"/>
+            <field name="view_id" ref="out_message_pec_tree"/>
             <field name="act_window_id" ref="action_out_mail_pec"/>
         </record>
 
